--- a/algos.ipynb
+++ b/algos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -199,17 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q = np.array([[-100, 0, 0, 0], [0, -100, 0, 0], [0, 0, -1, 0], [0, 0, 0, -1]])\n",
+    "Q = np.array([[100, 0, 0, 0], [0, 100, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1]])\n",
     "R = np.array([[0.01]])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -234,41 +234,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eigenvalues of A + BF: [ 0.          0.          4.48218697 -4.48218697]\n"
+      "Eigenvalues of A + BF: [ 0.00000000e+00  6.22917522e-04  4.48319660e+00 -4.48117784e+00]\n"
      ]
     }
    ],
    "source": [
-    "F = [0, 0, 0, 0]\n",
+    "F = [[ 0.        ],\n",
+    " [ 0.01276981],\n",
+    " [ 0.        ],\n",
+    " [-0.02003184]]\n",
+    "\n",
     "F = np.array(F).reshape(1, 4)\n",
-    "# print eigenvalues of A + BF\n",
+    "# F1 = [1, 1, 1, 1]\n",
+    "# F1 = np.array(F1).reshape(1, 4)\n",
+    "# # print eigenvalues of A + BF\n",
+    "# epsilon=0.01\n",
+    "# while(1):\n",
+    "#     if(max(np.linalg.eigvals(A + B @ F)) < 1 and min(np.linalg.eigvals(A + B @ F)) > -1):\n",
+    "#         break\n",
+    "#     F = F- epsilon*F1\n",
+    "#     print(\"Eigenvalues of A + BF:\", np.linalg.eigvals(A + B @ F))\n",
     "print(\"Eigenvalues of A + BF:\", np.linalg.eigvals(A + B @ F))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F [[ 0.00000000e+00  0.00000000e+00  2.00389583e+02 -2.36472947e-12]]\n"
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 1 is different from 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 18\u001b[0m\n\u001b[0;32m     13\u001b[0m         F \u001b[39m=\u001b[39m \u001b[39m-\u001b[39mnp\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(R \u001b[39m+\u001b[39m B\u001b[39m.\u001b[39mT \u001b[39m@\u001b[39m P \u001b[39m@\u001b[39m B) \u001b[39m@\u001b[39m B\u001b[39m.\u001b[39mT \u001b[39m@\u001b[39m P \u001b[39m@\u001b[39m A\n\u001b[0;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m F\n\u001b[1;32m---> 18\u001b[0m F \u001b[39m=\u001b[39m policy_iteration(A, B, Q, R, F)\n\u001b[0;32m     20\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m, F)\n",
+      "Cell \u001b[1;32mIn[26], line 8\u001b[0m, in \u001b[0;36mpolicy_iteration\u001b[1;34m(A, B, Q, R, F)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10000\u001b[39m):\n\u001b[0;32m      7\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m100\u001b[39m):\n\u001b[1;32m----> 8\u001b[0m         P_new \u001b[39m=\u001b[39m Q \u001b[39m+\u001b[39m F\u001b[39m.\u001b[39;49mT \u001b[39m@\u001b[39;49m R \u001b[39m@\u001b[39m F \u001b[39m+\u001b[39m (A \u001b[39m+\u001b[39m B \u001b[39m@\u001b[39m F)\u001b[39m.\u001b[39mT \u001b[39m@\u001b[39m P \u001b[39m@\u001b[39m (A \u001b[39m+\u001b[39m B \u001b[39m@\u001b[39m F)\n\u001b[0;32m      9\u001b[0m         \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39mallclose(P, P_new):\n\u001b[0;32m     10\u001b[0m             \u001b[39mbreak\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 1 is different from 4)"
      ]
     }
    ],
    "source": [
     "def policy_iteration(A, B, Q, R, F):\n",
-    "    P = np.ones((4, 4))\n",
-    "    \n",
+    "    # P is I in 4x4\n",
+    "    P = np.identity(4)\n",
+    "\n",
     "    \n",
     "    for i in range(10000):\n",
     "        for i in range(100):\n",
@@ -278,6 +296,7 @@
     "            P = P_new\n",
     "\n",
     "        F = -np.linalg.inv(R + B.T @ P @ B) @ B.T @ P @ A\n",
+    "        \n",
     "\n",
     "    return F\n",
     "\n",
@@ -289,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +408,7 @@
     "X = []\n",
     "\n",
     "for i in range(100):\n",
-    "    u = F @ x\n",
+    "    u = -F @ x\n",
     "    x_dot = A @ x + B @ u\n",
     "    \n",
     "    x = x + x_dot * 0.01\n",
@@ -400,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eigen values of A + BF [ 0.          0.         -0.22592405  0.22592405]\n"
+      "Eigen values of A + BF [ 0.          0.          0.22580797 -0.22580797]\n"
      ]
     }
    ],
@@ -418,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -426,105 +445,105 @@
      "output_type": "stream",
      "text": [
       "0.5235987755982988\n",
-      "0.5236014481342156\n",
-      "0.5236067932060492\n",
-      "0.5236148108274407\n",
-      "0.5236255010256722\n",
-      "0.523638863841667\n",
-      "0.5236548993299898\n",
-      "0.5236736075588464\n",
-      "0.5236949886100848\n",
-      "0.5237190425791949\n",
-      "0.523745769575309\n",
-      "0.5237751697212029\n",
-      "0.5238072431532954\n",
-      "0.5238419900216499\n",
-      "0.5238794104899746\n",
-      "0.5239195047356232\n",
-      "0.5239622729495962\n",
-      "0.5240077153365412\n",
-      "0.5240558321147545\n",
-      "0.5241066235161815\n",
-      "0.5241600897864185\n",
-      "0.5242162311847132\n",
-      "0.5242750479839664\n",
-      "0.5243365404707332\n",
-      "0.5244007089452244\n",
-      "0.524467553721308\n",
-      "0.5245370751265107\n",
-      "0.5246092735020194\n",
-      "0.5246841492026829\n",
-      "0.5247617025970139\n",
-      "0.5248419340671906\n",
-      "0.5249248440090584\n",
-      "0.5250104328321321\n",
-      "0.5250987009595981\n",
-      "0.5251896488283161\n",
-      "0.5252832768888214\n",
-      "0.525379585605327\n",
-      "0.5254785754557265\n",
-      "0.5255802469315956\n",
-      "0.525684600538195\n",
-      "0.525791636794473\n",
-      "0.525901356233068\n",
-      "0.5260137594003109\n",
-      "0.5261288468562282\n",
-      "0.5262466191745443\n",
-      "0.526367076942685\n",
-      "0.5264902207617801\n",
-      "0.526616051246666\n",
-      "0.5267445690258895\n",
-      "0.5268757747417104\n",
-      "0.5270096690501052\n",
-      "0.5271462526207696\n",
-      "0.5272855261371229\n",
-      "0.5274274902963102\n",
-      "0.5275721458092071\n",
-      "0.5277194934004223\n",
-      "0.527869533808302\n",
-      "0.5280222677849329\n",
-      "0.5281776960961464\n",
-      "0.5283358195215223\n",
-      "0.5284966388543927\n",
-      "0.5286601549018461\n",
-      "0.5288263684847314\n",
-      "0.5289952804376619\n",
-      "0.5291668916090195\n",
-      "0.5293412028609592\n",
-      "0.5295182150694131\n",
-      "0.5296979291240952\n",
-      "0.5298803459285053\n",
-      "0.5300654663999342\n",
-      "0.5302532914694679\n",
-      "0.530443822081992\n",
-      "0.5306370591961975\n",
-      "0.5308330037845844\n",
-      "0.5310316568334674\n",
-      "0.5312330193429805\n",
-      "0.5314370923270821\n",
-      "0.5316438768135603\n",
-      "0.5318533738440376\n",
-      "0.532065584473977\n",
-      "0.5322805097726863\n",
-      "0.532498150823324\n",
-      "0.532718508722905\n",
-      "0.5329415845823058\n",
-      "0.5331673795262698\n",
-      "0.5333958946934138\n",
-      "0.5336271312362328\n",
-      "0.5338610903211068\n",
-      "0.5340977731283058\n",
-      "0.534337180851996\n",
-      "0.5345793147002463\n",
-      "0.5348241758950338\n",
-      "0.5350717656722503\n",
-      "0.5353220852817083\n",
-      "0.5355751359871476\n",
-      "0.5358309190662414\n",
-      "0.5360894358106029\n",
-      "0.5363506875257918\n",
-      "0.536614675531321\n",
-      "0.536881401160663\n"
+      "0.5256999256883176\n",
+      "0.5299022258683552\n",
+      "0.5362141078458689\n",
+      "0.5446524350357729\n",
+      "0.5552425363960468\n",
+      "0.568018274098951\n",
+      "0.5830221451736297\n",
+      "0.6003054173916582\n",
+      "0.6199282998034171\n",
+      "0.6419601484705879\n",
+      "0.666479708079116\n",
+      "0.6935753902582253\n",
+      "0.7233455895750533\n",
+      "0.755899038321773\n",
+      "0.791355201363257\n",
+      "0.8298447124690104\n",
+      "0.8715098537138551\n",
+      "0.9165050796983243\n",
+      "0.9649975885125531\n",
+      "1.017167941547312\n",
+      "1.0732107344434023\n",
+      "1.133335321666655\n",
+      "1.1977665974009881\n",
+      "1.266745835667167\n",
+      "1.3405315928009176\n",
+      "1.4194006756617035\n",
+      "1.503649179193724\n",
+      "1.5935935972244588\n",
+      "1.6895720106643874\n",
+      "1.7919453575654103\n",
+      "1.9010987898060985\n",
+      "2.0174431215003903\n",
+      "2.1414163745739794\n",
+      "2.273485427320715\n",
+      "2.414147772141257\n",
+      "2.563933389079487\n",
+      "2.723406742210295\n",
+      "2.8931689063970705\n",
+      "3.0738598324301933\n",
+      "3.2661607590810022\n",
+      "3.4707967811610088\n",
+      "3.6885395832656958\n",
+      "3.9202103495082676\n",
+      "4.166682860213593\n",
+      "4.428886787248817\n",
+      "4.707811200417367\n",
+      "5.004508298140188\n",
+      "5.320097376495021\n",
+      "5.65576905158458\n",
+      "6.012789751160987\n",
+      "6.392506492450409\n",
+      "6.7963519642023495\n",
+      "7.225849932136525\n",
+      "7.682620988181087\n",
+      "8.168388665193723\n",
+      "8.684985940236743\n",
+      "9.234362150943944\n",
+      "9.818590351076233\n",
+      "10.439875133020715\n",
+      "11.100560946750361\n",
+      "11.803140946635173\n",
+      "12.550266399487999\n",
+      "13.34475668934639\n",
+      "14.189609956744047\n",
+      "15.088014412620057\n",
+      "16.04336036956027\n",
+      "17.059253035772397\n",
+      "18.13952612007505\n",
+      "19.288256299241628\n",
+      "20.50977860229456\n",
+      "21.80870276980592\n",
+      "23.18993064994005\n",
+      "24.658674696886468\n",
+      "26.22047764149164\n",
+      "27.881233408322007\n",
+      "29.64720935809456\n",
+      "31.525069939413072\n",
+      "33.52190183906667\n",
+      "35.64524072580281\n",
+      "37.903099688500305\n",
+      "40.30399947606257\n",
+      "42.85700065315059\n",
+      "45.57173779310537\n",
+      "48.45845583709761\n",
+      "51.52804875671744\n",
+      "54.79210066590986\n",
+      "58.26292953740506\n",
+      "61.95363368862173\n",
+      "65.8781412124731\n",
+      "70.05126253961897\n",
+      "74.4887463305248\n",
+      "79.20733890825478\n",
+      "84.22484745628842\n",
+      "89.56020721985834\n",
+      "95.23355296441606\n",
+      "101.26629496089795\n",
+      "107.68119978454716\n",
+      "114.50247623221293\n",
+      "121.75586668236487\n"
      ]
     }
    ],
