modified background img

--- a/riccati.ipynb
+++ b/riccati.ipynb
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,13 +377,15 @@
     "        \"\"\"\n",
     "        CART_POS = state_vec[0]\n",
     "        BOB_ANG  = state_vec[2]*180. / np.pi  # degrees\n",
+    "        # subtract bob angle from 90 to get angle wrt vertical\n",
     "        LENGTH_OF_PENDULUM = 110.\n",
     "\n",
-    "        IM = np.zeros( (512, 512,3), dtype='uint8' )\n",
-    "        # IM = cv2.imread('imgs/background.jpg').resize((512, 512))\n",
+    "        # IM = np.zeros( (512, 512,3), dtype='uint8' )\n",
+    "        IM = cv2.imread('imgs/background.jpg')\n",
+    "        IM = cv2.resize( IM, (512,512) )\n",
     "\n",
     "        # Ground line\n",
-    "        cv2.line(IM, (0, 450), (IM.shape[1], 450), (100,20,40), 4 )\n",
+    "        cv2.line(IM, (0, 450), (IM.shape[1], 450), (0,0,40), 4 )\n",
     "\n",
     "\n",
     "        # Mark ground line\n",
@@ -392,23 +394,23 @@
     "        for xd in np.linspace( XSTART, XEND, 11 ):\n",
     "            x = int(   (xd - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
     "\n",
-    "            cv2.circle( IM, (x, 450), 5, (0,0,255), -1 )\n",
+    "            cv2.circle( IM, (x, 450), 5, (255,0,255), -1 )\n",
     "\n",
-    "            cv2.putText(IM, str(xd), (x-15,450+15), cv2.FONT_HERSHEY_COMPLEX_SMALL, 0.8, (100,255,10), 1)\n",
+    "            cv2.putText(IM, str(xd), (x-15,450+15), cv2.FONT_HERSHEY_COMPLEX_SMALL, 0.8, (255, 255, 200), 1)\n",
     "\n",
     "\n",
     "        # Draw Wheels of the cart\n",
-    "        wheel_1_pos = int(   (CART_POS - 2 - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
-    "        wheel_2_pos = int(   (CART_POS + 2 - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
+    "        wheel_1_pos = int(   (CART_POS - 3 - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
+    "        wheel_2_pos = int(   (CART_POS + 3 - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
     "\n",
-    "        cv2.circle( IM, (wheel_1_pos, 415), 25, (255,255,255), 6 )\n",
-    "        cv2.circle( IM, (wheel_2_pos, 415), 25, (255,255,255), 6 )\n",
-    "        cv2.circle( IM, (wheel_1_pos, 415), 2, (255,255,255), -1 )\n",
-    "        cv2.circle( IM, (wheel_2_pos, 415), 2, (255,255,255), -1 )\n",
+    "        cv2.circle( IM, (wheel_1_pos, 415), 25, (0,255,255), 6 )\n",
+    "        cv2.circle( IM, (wheel_2_pos, 415), 25, (0,255,255), 6 )\n",
+    "        cv2.circle( IM, (wheel_1_pos, 415), 2, (0,255,255), -1 )\n",
+    "        cv2.circle( IM, (wheel_2_pos, 415), 2, (0,255,255), -1 )\n",
     "\n",
     "        # Cart base\n",
-    "        cart_base_start = int(   (CART_POS - 2.5 - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
-    "        cart_base_end   = int(   (CART_POS + 2.5 - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
+    "        cart_base_start = int(   (CART_POS - 4 - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
+    "        cart_base_end   = int(   (CART_POS + 4 - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
     "\n",
     "        cv2.line( IM, (cart_base_start, 380), (cart_base_end, 380), (100,100,100), 6 )\n",
     "\n",
@@ -434,7 +436,7 @@
     "        # Display on top\n",
     "        if t is not None:\n",
     "            cv2.putText(IM, \"t=\"+str(np.round(t,4))+\"sec\", (15, 15), cv2.FONT_HERSHEY_COMPLEX_SMALL, 0.8, (200,200,0), 1)\n",
-    "            cv2.putText(IM, \"ANG=\"+str(np.round(BOB_ANG,4))+\" degrees\", (15, 35), cv2.FONT_HERSHEY_COMPLEX_SMALL, 0.8, (200,200,0), 1)\n",
+    "            cv2.putText(IM, \"ANG=\"+str(np.round((BOB_ANG),4))+\" degrees\", (15, 35), cv2.FONT_HERSHEY_COMPLEX_SMALL, 0.8, (200,200,0), 1)\n",
     "            cv2.putText(IM, \"POS=\"+str(np.round(CART_POS,4))+\" m\", (15, 55), cv2.FONT_HERSHEY_COMPLEX_SMALL, 0.8, (200,200,0), 1)\n",
     "\n",
     "        return IM"
@@ -442,9 +444,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 9\u001b[0m\n\u001b[0;32m      5\u001b[0m     cv2\u001b[39m.\u001b[39mimshow( \u001b[39m'\u001b[39m\u001b[39mim\u001b[39m\u001b[39m'\u001b[39m, rendered )\n\u001b[0;32m      7\u001b[0m     \u001b[39m# Press q to exit\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m     \u001b[39mif\u001b[39;00m cv2\u001b[39m.\u001b[39;49mwaitKey(\u001b[39m5\u001b[39;49m) \u001b[39m==\u001b[39m \u001b[39mord\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mq\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m     10\u001b[0m         \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m     12\u001b[0m cv2\u001b[39m.\u001b[39mdestroyAllWindows()\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "syst = InvertedPendulum()\n",
     "\n",
