--- a/riccati.ipynb
+++ b/riccati.ipynb
@@ -107,7 +107,7 @@
     "R = np.array([[0.1]])\n",
     "\n",
     "# Compute the optimal gain matrix K using the ARE\n",
-    "P = solve_continuous_are(A, B, Q, R)\n",
+    "P = solve_continuous_are(A, B, Q, R) # solves the continuous algebraic Riccati equation\n",
     "K = np.linalg.inv(R + B.T @ P @ B) @ (B.T @ P @ A)\n",
     "\n",
     "# Simulate the system with the computed gain matrix K\n",
@@ -195,6 +195,13 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-44.13146425652865\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -345,7 +352,26 @@
     "df = pd.DataFrame({'x': x1, 'xdot': x2, 'theta': x3, 'thetadot': x4, 'u': U}, )\n",
     "# print df with style\n",
     "# print(df)\n",
+    "print(min(U))\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.          0.          9.17439151 -4.4826977 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print eig values of A + BF\n",
+    "print(np.linalg.eigvals(A + B @ K))"
    ]
   },
   {
@@ -358,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,19 +438,19 @@
     "        cart_base_start = int(   (CART_POS - 4 - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
     "        cart_base_end   = int(   (CART_POS + 4 - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
     "\n",
-    "        cv2.line( IM, (cart_base_start, 380), (cart_base_end, 380), (100,100,100), 6 )\n",
+    "        cv2.line( IM, (cart_base_start, 380), (cart_base_end, 380), (255,10,200), 6 )\n",
     "\n",
     "        # Pendulum hinge\n",
     "        pendulum_hinge_x = int(   (CART_POS - XSTART) / (XEND - XSTART) * IM.shape[0]   )\n",
     "        pendulum_hinge_y = 380\n",
-    "        cv2.circle( IM, (pendulum_hinge_x, pendulum_hinge_y), 10, (100,100,100), -1 )\n",
+    "        cv2.circle( IM, (pendulum_hinge_x, pendulum_hinge_y), 10, (200,150,10), -1 )\n",
     "\n",
     "\n",
     "        # Pendulum\n",
     "        pendulum_bob_x = int( LENGTH_OF_PENDULUM * np.cos( BOB_ANG / 180. * np.pi ) )\n",
     "        pendulum_bob_y = int( LENGTH_OF_PENDULUM * np.sin( BOB_ANG / 180. * np.pi ) )\n",
-    "        cv2.circle( IM, (pendulum_hinge_x+pendulum_bob_x, pendulum_hinge_y-pendulum_bob_y), 10, (255,255,255), -1 )\n",
-    "        cv2.line( IM, (pendulum_hinge_x, pendulum_hinge_y), (pendulum_hinge_x+pendulum_bob_x, pendulum_hinge_y-pendulum_bob_y), (255,255,255), 3 )\n",
+    "        cv2.circle( IM, (pendulum_hinge_x+pendulum_bob_x, pendulum_hinge_y-pendulum_bob_y), 10, (255,100,255), -1 )\n",
+    "        cv2.line( IM, (pendulum_hinge_x, pendulum_hinge_y), (pendulum_hinge_x+pendulum_bob_x, pendulum_hinge_y-pendulum_bob_y), (100,200,255), 3 )\n",
     "\n",
     "        # Mark the current angle\n",
     "        angle_display = BOB_ANG % 360\n",
@@ -444,21 +470,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 9\u001b[0m\n\u001b[0;32m      5\u001b[0m     cv2\u001b[39m.\u001b[39mimshow( \u001b[39m'\u001b[39m\u001b[39mim\u001b[39m\u001b[39m'\u001b[39m, rendered )\n\u001b[0;32m      7\u001b[0m     \u001b[39m# Press q to exit\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m     \u001b[39mif\u001b[39;00m cv2\u001b[39m.\u001b[39;49mwaitKey(\u001b[39m5\u001b[39;49m) \u001b[39m==\u001b[39m \u001b[39mord\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mq\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m     10\u001b[0m         \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m     12\u001b[0m cv2\u001b[39m.\u001b[39mdestroyAllWindows()\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "syst = InvertedPendulum()\n",
     "\n",
